[package]
name = "pokeget-plus"
authors = [ "talwat", "Criomby" ]
version = "1.5.0"
edition = "2021"
description = "Display Pokémon, Pokéballs & items in your terminal."
license = "MIT"
readme = "README.md"
documentation = "https://github.com/Criomby/pokeget-plus"
homepage = "https://github.com/Criomby/pokeget-plus"
repository = "https://github.com/Criomby/pokeget-plus"

[features]
# gen8 sprites are always included by default
gen7 = [] # include gen7 sprites & flag

[dependencies]
Inflector = { version = "0.11.4", default-features = false }
clap = { version = "4.3.19", features = ["derive"] }
image = { version = "0.24.6", default-features = false, features = [
    "png",
    "rgb",
] }
rand = "0.8.5"
rust-embed = { version = "8.3.0", features = ["include-exclude"] }
showie = "1.0.0"